Re-factoring from using HttpURLConnection to Java 11 HttpClient in a bunch of places Also made a Work Queue in CheckForUpdates for better handling. And made the ant push, first try key file, then password (so we dont have to specify the scp.password property in file 'ant_push_private.properties'