@@ -20,15 +20,15 @@
  ******************************************************************************/
 package com.dbxtune.alarm.writers;
 
-import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.InputStreamReader;
-import java.io.OutputStream;
 import java.io.StringWriter;
 import java.lang.invoke.MethodHandles;
-import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -165,31 +165,16 @@ extends AlarmWriterAbstract
 
 		try
 		{
-			URL url = new URL(_url);
+			HttpRequest request = HttpRequest.newBuilder()
+					.uri(URI.create(_url))
+					.header("Content-Type", "application/json")
+					.POST(HttpRequest.BodyPublishers.ofString(jsonMessage))
+					.build();
 
-			HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-			conn.setDoOutput(true);
-			conn.setRequestMethod("POST");
-			conn.setRequestProperty("Content-Type", "application/json");
-
-			// add headers
-//			addHeader(conn, _header_1);
-//			addHeader(conn, _header_2);
-//			addHeader(conn, _header_3);
-//			addHeader(conn, _header_4);
-//			addHeader(conn, _header_5);
-//			addHeader(conn, _header_6);
-//			addHeader(conn, _header_7);
-//			addHeader(conn, _header_8);
-//			addHeader(conn, _header_9);
-
-			// Write the output
-			OutputStream os = conn.getOutputStream();
-			os.write(jsonMessage.getBytes());
-			os.flush();
+			HttpResponse<String> response = _httpClient.send(request, HttpResponse.BodyHandlers.ofString());
 
 			// Check responce
-			int responceCode = conn.getResponseCode();
+			int responceCode = response.statusCode();
 			if ( responceCode >= 203) // see 'https://httpstatuses.com/' for http codes... or at the bottom of this source code
 			{
 				throw new Exception("Failed : HTTP error code : " + responceCode);
@@ -200,18 +185,18 @@ extends AlarmWriterAbstract
 			}
 
 			// Read responce and print the output...
-			BufferedReader br = new BufferedReader(new InputStreamReader((conn.getInputStream())));
-
-			String output;
-			while ((output = br.readLine()) != null)
+			for (String output : response.body().split("\n"))
 			{
 				_logger.info("Responce from server: " + output);
 				_logger.debug("Responce from server: " + output);
 			}
-
-			conn.disconnect();
 		}
-		catch (Exception  ex)
+		catch (InterruptedException ex)
+		{
+			Thread.currentThread().interrupt();
+			_logger.error("Problems sending REST call to '"+_url+"'. Caught: "+ex, ex);
+		}
+		catch (Exception ex)
 		{
 			_logger.error("Problems sending REST call to '"+_url+"'. Caught: "+ex , ex);
 		}
@@ -254,6 +239,10 @@ extends AlarmWriterAbstract
 	//-------------------------------------------------------
 	// class members
 	//-------------------------------------------------------
+	private HttpClient _httpClient = HttpClient.newBuilder()
+			.followRedirects(HttpClient.Redirect.NORMAL)
+			.build();
+
 	private String  _url              = "";
 	private String  _msgTemplate      = "";
 	private String  _slackAttachments = "";
